--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,19 +1,12 @@
 name: Hello World with Python
 
 on:
-  # Trigger on push to main branch
   push:
     branches: [ main, master ]
-  
-  # Trigger on pull request to main branch
   pull_request:
     branches: [ main, master ]
-  
-  # Schedule to run daily at 00:00 UTC
   schedule:
     - cron: '0 0 * * *'
-  
-  # Allow manual trigger from GitHub UI
   workflow_dispatch:
     inputs:
       environment:
@@ -26,9 +19,8 @@ on:
         - staging
         - production
 
-# Environment variables available to all jobs
 env:
-  PYTHON_VERSION: '3.11'  # Updated to newer Python version
+  PYTHON_VERSION: '3.11'
   REQUESTED_DATE: '03-02-2026'
 
 jobs:
@@ -38,125 +30,36 @@ jobs:
     steps:
     # Step 1: Checkout the repository code
     - name: 📥 Checkout code
-      uses: actions/checkout@v4  # Updated to v4
+      uses: actions/checkout@v4
     
-    # Step 2: Set up Python
+    # Step 2: Set up Python WITHOUT cache
     - name: 🐍 Set up Python ${{ env.PYTHON_VERSION }}
-      uses: actions/setup-python@v5  # Updated to v5
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ env.PYTHON_VERSION }}
-        cache: 'pip'  # Enable dependency caching
+        # REMOVED: cache: 'pip'  # No cache since we don't have requirements.txt
     
-    # Step 3: Display Python version
-    - name: 🔍 Check Python version
+    # Step 3: Verify Python installation
+    - name: 🔍 Verify Python
       run: |
         python --version
-        python -c "import sys; print(f'Python path: {sys.executable}')"
-        echo "Python location: $(which python)"
+        python -c "print('Python is working correctly!')"
     
-    # Step 4: List files (for debugging)
-    - name: 📁 List repository files
-      run: |
-        echo "=== Repository structure ==="
-        pwd
-        ls -la
-        
-        echo -e "\n=== Python files ==="
-        find . -name "*.py" -type f | head -20
-        
-        echo -e "\n=== Workflow files ==="
-        find .github -type f
-    
-    # Step 5: Run the Python program
+    # Step 4: Run the Python program
     - name: 🚀 Run Hello World program
       run: python hello.py
-      id: run_hello
     
-    # Step 6: Create a detailed log file
+    # Step 5: Create log file
     - name: 📝 Create execution log
       run: |
-        echo "=== Hello World Execution Log ===" > execution.log
-        echo "Timestamp: $(date -u '+%Y-%m-%d %H:%M:%S UTC')" >> execution.log
-        echo "Requested Date: ${{ env.REQUESTED_DATE }}" >> execution.log
-        echo "Actual Date: $(date -u '+%d-%m-%Y')" >> execution.log
-        echo "Workflow: ${{ github.workflow }}" >> execution.log
-        echo "Run ID: ${{ github.run_id }}" >> execution.log
-        echo "Run Number: ${{ github.run_number }}" >> execution.log
-        echo "Actor: ${{ github.actor }}" >> execution.log
-        echo "Repository: ${{ github.repository }}" >> execution.log
-        echo "Ref: ${{ github.ref }}" >> execution.log
-        echo "SHA: ${{ github.sha }}" >> execution.log
-        
-        # Add system info
-        echo -e "\n=== System Information ===" >> execution.log
-        echo "Runner OS: $(uname -s)" >> execution.log
-        echo "Kernel Version: $(uname -r)" >> execution.log
-        echo "Architecture: $(uname -m)" >> execution.log
-        
-        # Add Python info
-        echo -e "\n=== Python Information ===" >> execution.log
-        python --version >> execution.log 2>&1
-        echo "Python path: $(which python)" >> execution.log
-        
-        # Add disk space info
-        echo -e "\n=== Disk Space ===" >> execution.log
-        df -h >> execution.log
-        
-        # Show log contents for verification
-        echo -e "\nLog file created with contents:"
-        cat execution.log
+        echo "Hello World Execution" > execution.log
+        echo "Timestamp: $(date)" >> execution.log
+        echo "Date: 03-02-2026" >> execution.log
+        echo "Success: Yes" >> execution.log
     
-    # Step 7: Create a simple output file
-    - name: 📄 Create output file
-      run: |
-        echo "Hello World Program Output" > output.txt
-        echo "==========================" >> output.txt
-        echo "Generated on: $(date)" >> output.txt
-        echo "Status: Success" >> output.txt
-        echo "Visit: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}" >> output.txt
-    
-    # Step 8: Upload artifacts using latest version
-    - name: 📤 Upload artifacts
-      uses: actions/upload-artifact@v4  # Updated to v4
+    # Step 6: Upload artifact
+    - name: 📤 Upload execution log
+      uses: actions/upload-artifact@v4
       with:
-        name: hello-world-artifacts
-        path: |
-          execution.log
-          output.txt
-        retention-days: 30
-        if-no-files-found: error  # Fail if no files found
-    
-    # Step 9: Upload workflow summary
-    - name: 📊 Create workflow summary
-      run: |
-        echo "## 🎉 Hello World Execution Summary" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "**Workflow:** ${{ github.workflow }}" >> $GITHUB_STEP_SUMMARY
-        echo "**Run ID:** [${{ github.run_id }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> $GITHUB_STEP_SUMMARY
-        echo "**Status:** ✅ Success" >> $GITHUB_STEP_SUMMARY
-        echo "**Date Checked:** 03-02-2026" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "### 📁 Generated Artifacts" >> $GITHUB_STEP_SUMMARY
-        echo "- `execution.log`: Detailed execution log" >> $GITHUB_STEP_SUMMARY
-        echo "- `output.txt`: Program output summary" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "### 🔧 Technical Details" >> $GITHUB_STEP_SUMMARY
-        echo "- **Runner:** ubuntu-latest" >> $GITHUB_STEP_SUMMARY
-        echo "- **Python Version:** ${{ env.PYTHON_VERSION }}" >> $GITHUB_STEP_SUMMARY
-        echo "- **Trigger:** ${{ github.event_name }}" >> $GITHUB_STEP_SUMMARY
-    
-    # Step 10: Success message
-    - name: ✅ Display completion
-      run: |
-        echo "========================================"
-        echo "🎉 Workflow completed successfully!"
-        echo "========================================"
-        echo ""
-        echo "📊 Summary:"
-        echo "  - Python program executed"
-        echo "  - Artifacts uploaded"
-        echo "  - Logs created"
-        echo ""
-        echo "📁 Download artifacts from the workflow run page"
-        echo "🔗 View this run: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-        echo "========================================"
+        name: hello-world-output
+        path: execution.log
